--- a/web/src/layouts/UserLayout.less
+++ b/web/src/layouts/UserLayout.less
@@ -21,6 +21,11 @@
 .content {
   padding: 32px 0;
   flex: 1;
+  margin: auto;
+  background-color: #f7f9fa;
+  width: 500px;
+  border-radius: 8px;
+  box-shadow: 2px 0 6px rgba(0, 21, 41, 0.35);
 }
 
 @media (min-width: @screen-md-min) {
